dependency cleanup and more tests